# libopus-gdnative

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  SConstruct  api.json  conanfile.txt
jni/: Android.mk  Application.mk
src/: OpusDecoderNode.cpp  OpusDecoderNode.h  OpusEncoderNode.cpp  OpusEncoderNode.h  Utils.cpp  Utils.h  Values.h  init.cpp
